[gd_scene load_steps=21 format=2]

[ext_resource path="res://Enemies/Skeleton/Sprites/skeleton.png" type="Texture" id=1]
[ext_resource path="res://Enemies/PlayerDetectionZone/PlayerDetectionZone.tscn" type="PackedScene" id=2]
[ext_resource path="res://Collision/Hitbox/Hitbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Collision/SoftCollision/SoftCollision.tscn" type="PackedScene" id=4]
[ext_resource path="res://Collision/HurtBox/Hurtbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://HUD/Enemy/HealthBar.tscn" type="PackedScene" id=6]
[ext_resource path="res://Light & Shadows/Shadows/SmallShadow.png" type="Texture" id=7]
[ext_resource path="res://Music and Sounds/Hurt.wav" type="AudioStream" id=8]
[ext_resource path="res://Enemies/Skeleton/Skeleton.gd" type="Script" id=9]
[ext_resource path="res://Enemies/Bat/BloodMaterial.tres" type="Material" id=10]

[sub_resource type="Animation" id=9]
resource_name = "Attack"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 31, 32, 33, 34, 35, 36, 37, 38, 39 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.9 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_finished"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.4, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=1]
resource_name = "Death"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 41, 42, 43, 44, 45, 46, 47, 48, 49 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "death_animation_finished"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "Idle"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11 ]
}

[sub_resource type="Animation" id=10]
resource_name = "Walk"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 22, 23, 24, 25, 26, 27, 28, 29 ]
}

[sub_resource type="CircleShape2D" id=3]
radius = 16.5952

[sub_resource type="CapsuleShape2D" id=4]
radius = 5.63382
height = 0.0

[sub_resource type="CapsuleShape2D" id=5]
radius = 7.12132
height = 2.0

[sub_resource type="CircleShape2D" id=6]
radius = 153.961

[sub_resource type="CircleShape2D" id=7]
radius = 33.4039

[sub_resource type="ParticlesMaterial" id=8]
flag_disable_z = true
gravity = Vector3( 0, 50, 0 )
initial_velocity = 20.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[node name="Skeleton" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 9 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.125, 0 )
texture = ExtResource( 1 )
offset = Vector2( 0, -15 )
vframes = 5
hframes = 10
frame = 31

[node name="ShadowSprite" type="Sprite" parent="."]
texture = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 9 )
anims/Death = SubResource( 1 )
anims/Idle = SubResource( 2 )
anims/Walk = SubResource( 10 )

[node name="SoftCollision" parent="." instance=ExtResource( 4 )]

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
shape = SubResource( 3 )

[node name="EnemyCollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="Hurtbox" parent="." instance=ExtResource( 5 )]
visible = false
position = Vector2( 0, -19 )
collision_layer = 2147483656

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
scale = Vector2( 1, 1 )
shape = SubResource( 5 )

[node name="HealthBar" parent="." instance=ExtResource( 6 )]
position = Vector2( -4.82323, -33.792 )

[node name="Stats" parent="HealthBar" index="0"]
strength = 2
max_health = 7
current_level = 2

[node name="FlashTimer" type="Timer" parent="."]

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 2 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
modulate = Color( 0.898039, 0, 0, 0.615686 )
self_modulate = Color( 1, 0, 0, 0.341176 )
shape = SubResource( 6 )

[node name="Hitbox" parent="." instance=ExtResource( 3 )]
position = Vector2( 0.176781, -16.9706 )
collision_mask = 32
damage = 3

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 7 )

[node name="BloodParticles" type="Particles2D" parent="."]
material = ExtResource( 10 )
position = Vector2( 0, -16.875 )
emitting = false
amount = 10
lifetime = 0.5
one_shot = true
speed_scale = 3.0
explosiveness = 0.15
randomness = 1.0
visibility_rect = Rect2( 0, 0, 0, 24.9532 )
process_material = SubResource( 8 )

[node name="HurtSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -12.0

[node name="RayCast2D" type="RayCast2D" parent="."]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="no_health" from="HealthBar/Stats" to="." method="_on_Stats_no_health"]
[connection signal="timeout" from="FlashTimer" to="." method="_on_FlashTimer_timeout"]

[editable path="SoftCollision"]

[editable path="Hurtbox"]

[editable path="HealthBar"]

[editable path="PlayerDetectionZone"]

[editable path="Hitbox"]
